<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e0f0ff"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/label_username"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/phoneNum"
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:hint="@string/text_telNum"
                android:inputType="phone"
                android:textSize="15sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:gravity="center">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/text_verifyCode"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/verifyCode"
                    android:layout_width="181dp"
                    android:layout_height="45dp"
                    android:hint="@string/label_verifyCode"
                    android:inputType="textPersonName"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/sendMsg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_sendCode" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/button_login"
        android:textSize="20sp" />
</LinearLayout>

